tests/fixtures/errors/reserved_member_take.z
# reserved_member_take.z -- a record field named `take` is rejected (E0037).

point: record {
    take: 0
}

main: function is {
    print "unreachable"
}
